--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
     "dev:all": "tsc -b && npm run lint && npm run format && npm run dev",
+    "dev:gramador": "APP_BRAND=gramador vite",
+    "dev:yama": "APP_BRAND=yama vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/file-saver": "^2.0.7",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.8.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -20,6 +25,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.4",
+    "react-router-dom": "^7.13.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
